--- a/Vastar/SideBar/ChangePwViewController.xib
+++ b/Vastar/SideBar/ChangePwViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -51,11 +51,12 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3E-zU-Nh7">
-                    <rect key="frame" x="210" y="309" width="105" height="40"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N3E-zU-Nh7">
+                    <rect key="frame" x="200" y="309" width="115" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="KHW-bJ-Uka"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <state key="normal" title="Button" backgroundImage="btn"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rwv-jV-BKd">
@@ -91,7 +92,7 @@
                 <constraint firstItem="N3E-zU-Nh7" firstAttribute="centerY" secondItem="gbP-l6-RzN" secondAttribute="centerY" id="Poq-Eg-QLZ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CDp-iy-4qI" secondAttribute="trailing" constant="60" id="RC9-pO-6pj"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="3ny-kC-MH4" secondAttribute="trailing" constant="60" id="Wqu-5e-8Q2"/>
-                <constraint firstItem="N3E-zU-Nh7" firstAttribute="leading" secondItem="gbP-l6-RzN" secondAttribute="trailing" constant="50" id="Y7d-ob-gLN"/>
+                <constraint firstItem="N3E-zU-Nh7" firstAttribute="leading" secondItem="gbP-l6-RzN" secondAttribute="trailing" constant="40" id="Y7d-ob-gLN"/>
                 <constraint firstItem="gbP-l6-RzN" firstAttribute="leading" secondItem="3ny-kC-MH4" secondAttribute="leading" id="bd9-iO-pTf"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="2Vi-2e-q7C" secondAttribute="bottom" constant="50" id="hCI-SZ-T3U"/>
                 <constraint firstItem="N3E-zU-Nh7" firstAttribute="trailing" secondItem="3ny-kC-MH4" secondAttribute="trailing" id="jeS-5Q-kdf"/>
