--- a/Vastar/SideBar/SubPage/ProductDetailViewController.xib
+++ b/Vastar/SideBar/SubPage/ProductDetailViewController.xib
@@ -12,6 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductDetailViewController" customModule="Vastar" customModuleProvider="target">
             <connections>
                 <outlet property="addShoppingCarBtn" destination="thH-kt-S49" id="7zD-0x-vul"/>
+                <outlet property="amountAddBtn" destination="3ug-PI-nFX" id="cwR-h1-rJQ"/>
+                <outlet property="amountLessBtn" destination="Hhf-gb-UCE" id="Xsn-p5-Th2"/>
                 <outlet property="amountTextField" destination="mYA-zR-h6U" id="S64-ta-GXX"/>
                 <outlet property="amountTitleLabel" destination="8k1-3x-HRI" id="r6b-cu-e0X"/>
                 <outlet property="colorTextField" destination="ueM-8S-gBs" id="vdX-1N-KPe"/>
@@ -82,10 +84,10 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYA-zR-h6U">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mYA-zR-h6U">
                     <rect key="frame" x="288" y="335.5" width="32" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ug-PI-nFX">
                     <rect key="frame" x="325" y="337.5" width="30" height="30"/>
